// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fn() versus empty package.json 1`] = `
Object {
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "eslint": "eslint --cache --fix .",
    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \\"ecmaVersion:2018,ecmaFeatures:{jsx:true}\\" --rule \\"key-spacing:[error,{align:value}]\\" .",
    "lint": "npm run eslint",
    "pretest": "npm run fmt",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
    "sort-package-json": "npx -q sort-package-json",
    "test": "npm run lint",
  },
}
`;

exports[`fn() versus engines.node >= 8 1`] = `
Object {
  "engines": Object {
    "node": ">=8",
  },
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": Object {
    "eslint": "eslint --cache --fix .",
    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \\"ecmaVersion:2018,ecmaFeatures:{jsx:true}\\" --rule \\"key-spacing:[error,{align:value}]\\" .",
    "lint": "npm run eslint",
    "pretest": "npm run fmt",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
    "sort-package-json": "npx -q sort-package-json",
    "test": "npm run lint",
  },
}
`;

exports[`fn() versus package.json with ava and nyc 1`] = `
Object {
  "devDependencies": Object {
    "ava": "*",
    "nyc": "*",
  },
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "ava": "nyc ava",
    "eslint": "eslint --cache --fix .",
    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \\"ecmaVersion:2018,ecmaFeatures:{jsx:true}\\" --rule \\"key-spacing:[error,{align:value}]\\" .",
    "lint": "npm run eslint",
    "nyc": "nyc check-coverage",
    "pretest": "npm run fmt",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
    "sort-package-json": "npx -q sort-package-json",
    "test": "npm run lint",
  },
}
`;

exports[`fn() versus package.json with ava and pre-existing scripts 1`] = `
Object {
  "devDependencies": Object {
    "ava": "*",
  },
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "ava": "ava",
    "eslint": "eslint --cache --fix .",
    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \\"ecmaVersion:2018,ecmaFeatures:{jsx:true}\\" --rule \\"key-spacing:[error,{align:value}]\\" .",
    "lint": "npm run eslint",
    "pretest": "npm run fmt",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
    "sort-package-json": "npx -q sort-package-json",
    "test": "true && npm run lint",
  },
}
`;

exports[`fn() versus package.json with postpublish (old greenkeeper) 1`] = `
Object {
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "eslint": "eslint --cache --fix .",
    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \\"ecmaVersion:2018,ecmaFeatures:{jsx:true}\\" --rule \\"key-spacing:[error,{align:value}]\\" .",
    "lint": "npm run eslint",
    "pretest": "npm run fmt",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
    "sort-package-json": "npx -q sort-package-json",
    "test": "npm run lint",
  },
}
`;

exports[`fn() versus package.json with postpublish 1`] = `
Object {
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "eslint": "eslint --cache --fix .",
    "fmt": "npm run sort-package-json && npm run prettier && npm run fmt:eslint",
    "fmt:eslint": "eslint --fix --no-eslintrc --parser-options \\"ecmaVersion:2018,ecmaFeatures:{jsx:true}\\" --rule \\"key-spacing:[error,{align:value}]\\" .",
    "lint": "npm run eslint",
    "postpublish": "true",
    "pretest": "npm run fmt",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
    "sort-package-json": "npx -q sort-package-json",
    "test": "npm run lint",
  },
}
`;
